syntax = "proto3";
package ventus.server;

import "auth/auth.server.proto";
import "common/common.server.proto";
import "game/chat/chat.server.proto";
import "game/movement/movement.server.proto";
import "game/session/session.server.proto";

message ServerMessage {
  oneof payload {
    protos.auth.LoginResponse login_response = 1;
    ventus.server.common.MessagePong message_pong = 2;
    ventus.server.common.StatusMessage status_message = 3;
    protos.game.server.chat.OutgoingChatMessage outgoing_chat_message = 4;
    protos.game.server.chat.SystemMessage system_message = 5;
    protos.game.server.movement.PlayerPosition player_position = 6;
    protos.game.server.session.PlayerSpawn player_spawn = 7;
  }
}